# DEP2_Repository

./: .env.example  .gitignore  Makefile  README.md  SQL_Queries.md  config.py  main.py  pyproject.toml  sql-queries.md
Controllers/: AdminController.py  AnnualReportsController.py  KMOcontroller.py  README.md  ScoreController.py  WebScraperController.py
Controllers/Repositories/: AnnualReports_Repository.py  ConnectionController.py  FileController.py  KMO_Repository.py  README.md  ScoreRepository.py  WebScraper_Repository.py
DatabaseTools/: AnnualReports_Repository.py  Connection_Object.py  KMO_Repository.py  README.md  SusRep_Repository.py  WebScraper_Repository.py
KMO/: AdminController.py
ML/: ann-environment-score.h5  ann-general-score.h5  ann-governance-score.h5  ann-social-score.h5  flask_tryout.py  notebook-ann.ipynb  notebook-linreg.ipynb
Score_ML_Model/Python_Notebooks/: KMO.ipynb  Kaggle.ipynb  Kaggle.py  ML_Model_RFR.ipynb  PySpark.py  Random_ML_Pipeline.ipynb  TrueData_ML_Pipeline.ipynb  db_properties.ini  test.py
ScrapingTools/: AnnualReportsController.py  FileController.py  README.md  WebScraperController.py  __init__.py  nbbscraper.py  webscraper.py
ScrapingTools/contents/: 0431852314.txt
ScrapingTools/csv/: websites.csv
Storage/: 0431852314.txt  Constant_Variables.py
Web_Application/: README.md  connectionDB.py
backend/: Makefile  README.md
backend/app/: __init__.py  app.py  (+1 more)
logs/: logScraper.txt
machine-learning/: notebook-ann.ipynb  notebook-linreg.ipynb  notebook-rfr.ipynb  tryout_urbanisatie.ipynb  visualization-data.ipynb
(+59 files in other folders)
