[tool.poetry]
name = "dep2_repository"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
tqdm = "^4.64.1"
selenium = "^4.5.0"
PyPDF2 = "^2.11.1"
bs4 = "^0.0.1"
requests = "^2.28.1"
PyMySQL = "^1.0.2"
pyodbc = "^4.0.34"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.42"
tika = "^1.24"
openpyxl = "^3.0.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
